--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@ body {
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
-
+  min-width: 300px;
+  min-height: 300px;
 }
 
 form {
@@ -13,6 +14,22 @@ form {
 a {
   color: white;
 }
+
+#navigation {
+}
+
+#navigation button {
+  display: block;
+}
+
+#navigation h3 {
+  display: inline-block;
+}
+
+#settings {
+  display: none;
+}
+
 
 #searchText {
   border: solid 3px #3888cf;
