--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@ body {
 	text-align: center;
 	min-width: 300px;
 	min-height: 300px;
+	margin: 0;
+	padding: 0;
 }
 
 form {
@@ -22,7 +24,7 @@ a {
 	position: fixed;
 	width: 100%;
 	padding-left: 0;
-	bottom: 0;
+	bottom: -10px;
 	right: 0;
 	left: 0;
 }
@@ -41,7 +43,7 @@ a {
 	font-weight: bold;
 	width: 100%;
 	height: 100%;
-	padding: 10px;
+	padding: 5px 0;
 	text-decoration: none;
 }
 
@@ -57,9 +59,58 @@ a {
 	display: none;
 }
 
-#searchText {
+.button-normal {
 	border: solid 3px #3888cf;
-	text-transform: uppercase;
+}
+
+#searchText {
+	background-color: #5ba0dd;
+	padding: 5px;
+	margin-top: 5em;
+	/* text-transform: uppercase; */
 	text-align: center;
+	color: white;
+}
+
+#searchText::placeholder {
+	color: rgb(255, 255, 255);
+}
+
+.searchType {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.searchType input[type="button"] {
+	display: inline-block;
+	width: 100%;
+	padding: 5px;
+	border: none;
+	background-color: #316ca0;
+	color: white;
+	cursor: pointer;
+}
+
+.searchType input[type="button"].active {
+	background-color: #57a9f2;
 	font-weight: bold;
+	cursor: default;
+}
+
+.searchType input[type="button"]:hover {
+	background-color: #57a9f2;
+	font-weight: bold;
+}
+
+/* Settings */
+
+.settings-cat {
+	text-align: left;
+	margin: 0;
+}
+
+.settings-cat summary {
+	background-color: #316ca0;
+	padding: 10px;
+	cursor: pointer;
 }
