--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@ body {
 	color: white;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	text-align: center;
-	min-width: 300px;
-	min-height: 300px;
+	min-width: 500px;
+	min-height: 350px;
 	margin: 0;
 	padding: 0;
+	font-size: 1em;
 }
 
 form {
@@ -68,6 +69,7 @@ a {
 }
 
 #searchText {
+	border: solid 3px #185386;
 	background-color: #5ba0dd;
 	padding: 5px;
 	margin-top: 5em;
