add report form link, add favicon

--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,6 @@ a {
 	bottom: -10px;
 	right: 0;
 	left: 0;
-}
-
-#navigation ul {
 	list-style: none;
 }
 
@@ -40,7 +37,7 @@ a {
 
 #navigation li a {
 	display: inline-block;
-	background-color: #316ca0;
+	background-color: #0f5897;
 	font-weight: bold;
 	width: 100%;
 	height: 100%;
@@ -49,11 +46,11 @@ a {
 }
 
 #navigation li a.active-tab {
-	background-color: #3c7db6;
+	background-color: #0f5897;
 }
 
 #navigation li a:hover {
-	background-color: #3c7db6;
+	background-color: #2779c2;
 }
 
 #settings {
@@ -71,15 +68,21 @@ a {
 #searchText {
 	border: solid 3px #185386;
 	background-color: #5ba0dd;
+	width: 250px;
 	padding: 5px;
+	font-size: 1.2em;
+	font-weight: bold;
 	margin-top: 5em;
-	/* text-transform: uppercase; */
+	text-transform: uppercase;
 	text-align: center;
 	color: white;
 }
 
 #searchText::placeholder {
 	color: rgb(255, 255, 255);
+	opacity: .8;
+	text-transform: none;
+	font-weight: 500;
 }
 
 .searchType {
@@ -92,7 +95,7 @@ a {
 	width: 100%;
 	padding: 5px;
 	border: none;
-	background-color: #316ca0;
+	background-color: #0f5897;
 	color: white;
 	cursor: pointer;
 }
@@ -103,9 +106,10 @@ a {
 	cursor: default;
 }
 
-.searchType input[type="button"]:hover {
-	background-color: #57a9f2;
-	font-weight: bold;
+.report-issue {
+	position: fixed;
+	bottom: 70px;
+	left: 10px;
 }
 
 /* Settings */
